--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcc 'PT'
 - !lcsh 'Norwegian drama'
 - !lcsh 'Marriage -- Drama'
+- GITenberg
 title: 'Puphejmo: Dramo en tri aktoj'
 url: http://www.gutenberg.org/ebooks/19030
